--- a/.github/workflows/update-checker.yml
+++ b/.github/workflows/update-checker.yml
@@ -13,13 +13,13 @@
 name: Update Checker
 
 env:
-  REPO_URL: https://github.com/coolsnowwolf/lede
-  REPO_BRANCH: master
+  REPO_URL: https://github.com/1715173329/immortalwrt-mt798x
+  REPO_BRANCH: nokia
 
 on:
   workflow_dispatch:
 #  schedule:
-#    - cron: 0 */18 * * *
+   - cron: 0 */18 * * *
 
 jobs:
   check:
